@@ -1,3 +1,8 @@
+2005-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* poe-xemacs.el (run-at-time): Attempt to load `timer-funcs'
+	before `timer'.
+
 2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* README.en, README.ja (CVS): Remove the description about
